[tool.poetry]
name = "flet-test"
version = "0.1.0"
description = ""
authors = ["Lukas Hörtnagl <31772692+holukas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.19.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
